// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<search /> should render 1`] = `
.c9:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  border: 0;
}

.c2 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
  background-color: #fff;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c11 ul {
  z-index: 100;
}

.c11 li[role="option"]:nth-child(2n + 1) {
  background: #f5f7fa;
}

.c1 {
  box-shadow: 0 10px 10px -10px #c9d3df;
}

.c4 {
  margin-top: 0;
  font-size: 1.875rem;
  line-height: 1.4;
  color: #006ab2;
}

.c5 {
  font-size: 1rem;
}

.c3 {
  position: relative;
  padding: 1rem 0;
  text-align: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: 0;
  position: relative;
  width: 70%;
}

.c7 {
  position: absolute;
  left: 0;
  top: 0;
  margin: 1rem 0 0 1.25rem;
  width: 1.3rem;
  height: 1.3rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0 1rem 0 4rem;
  width: 100%;
  height: 50px;
  font-size: inherit;
  font-family: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
}

.c10:focus {
  border-color: #006be6;
  outline: none;
}

.c12 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  margin-left: 0.5rem;
}

.c12:not([disabled]):hover,
.c12:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c12:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c12[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c12[aria-pressed="true"]:not([disabled]):hover,
.c12[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c12[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c12[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
    width: 100%;
  }
}

@media (max-width:600px) {
  .c7 {
    display: none;
  }
}

@media (max-width:600px) {
  .c10 {
    height: 50px;
    padding: 0 1rem;
  }
}

@media (max-width:600px) {
  .c12 {
    margin-left: 0;
    margin-top: 0.625rem;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <p
          class="c4"
        >
          Posez votre question sur le droit du travail
          <br />
          <a
            class="c5"
            href="/droit-du-travail"
          >
            Le droit du travail, c‘est quoi ?
          </a>
        </p>
        <form
          class="c6"
        >
          <svg
            class="c7"
            viewBox="0 0 20 20"
          >
            <title />
            <path
              d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <label
            class="c8"
            for="main-search-input"
          >
            <span
              class="c9"
            >
              Rechercher
            </span>
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-owns="react-autowhatever-cdtn-documents-suggester"
              role="combobox"
              style="flex: 1;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-autowhatever-cdtn-documents-suggester"
                autocomplete="off"
                class="c10"
                id="main-search-input"
                name="query"
                placeholder="Recherche"
                type="search"
                value=""
              />
              <div
                class="c11"
                id="react-autowhatever-cdtn-documents-suggester"
                role="listbox"
              />
            </div>
          </label>
          <button
            aria-pressed="false"
            class="c12"
            type="submit"
          >
            Rechercher
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<search /> should render suggestions 1`] = `
.c9:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  border: 0;
}

.c2 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c0 {
  padding: 1.25rem 0;
  background-color: #fff;
}

.c13 {
  display: inline-block;
}

.c12 p {
  margin: 0;
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  text-align: left;
}

.c11 ul {
  z-index: 100;
}

.c11 li[role="option"]:nth-child(2n + 1) {
  background: #f5f7fa;
}

.c1 {
  box-shadow: 0 10px 10px -10px #c9d3df;
}

.c4 {
  margin-top: 0;
  font-size: 1.875rem;
  line-height: 1.4;
  color: #006ab2;
}

.c5 {
  font-size: 1rem;
}

.c3 {
  position: relative;
  padding: 1rem 0;
  text-align: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0 auto;
  padding: 0;
  position: relative;
  width: 70%;
}

.c7 {
  position: absolute;
  left: 0;
  top: 0;
  margin: 1rem 0 0 1.25rem;
  width: 1.3rem;
  height: 1.3rem;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0 1rem 0 4rem;
  width: 100%;
  height: 50px;
  font-size: inherit;
  font-family: inherit;
  color: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: #f9f9fc;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  -webkit-transition: border 250ms ease;
  transition: border 250ms ease;
}

.c10:focus {
  border-color: #006be6;
  outline: none;
}

.c14 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  margin-left: 0.5rem;
}

.c14:not([disabled]):hover,
.c14:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c14:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c14[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c14[aria-pressed="true"]:not([disabled]):hover,
.c14[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c14[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c14[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media (max-width:980px) {
  .c6 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c6 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    height: auto;
    width: 100%;
  }
}

@media (max-width:600px) {
  .c7 {
    display: none;
  }
}

@media (max-width:600px) {
  .c10 {
    height: 50px;
    padding: 0 1rem;
  }
}

@media (max-width:600px) {
  .c14 {
    margin-left: 0;
    margin-top: 0.625rem;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <p
          class="c4"
        >
          Posez votre question sur le droit du travail
          <br />
          <a
            class="c5"
            href="/droit-du-travail"
          >
            Le droit du travail, c‘est quoi ?
          </a>
        </p>
        <form
          class="c6"
        >
          <svg
            class="c7"
            viewBox="0 0 20 20"
          >
            <title />
            <path
              d="M17.876 8.939c0 2.197-.819 4.208-2.123 5.773l4.023 4.022a.72.72 0 0 1 0 1.043.735.735 0 0 1-.522.223.736.736 0 0 1-.52-.223l-4.023-4.023a8.813 8.813 0 0 1-5.772 2.123C4.022 17.877 0 13.855 0 8.939 0 4.022 4.023 0 8.939 0c4.915 0 8.937 4.023 8.937 8.939zM9.001 16.5c4.124 0 7.499-3.375 7.499-7.5S13.125 1.5 9 1.5C4.877 1.5 1.5 4.875 1.5 9s3.376 7.5 7.5 7.5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <label
            class="c8"
            for="main-search-input"
          >
            <span
              class="c9"
            >
              Rechercher
            </span>
            <div
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="react-autowhatever-cdtn-documents-suggester"
              role="combobox"
              style="flex: 1;"
            >
              <input
                aria-autocomplete="list"
                aria-controls="react-autowhatever-cdtn-documents-suggester"
                autocomplete="off"
                class="c10"
                id="main-search-input"
                name="query"
                placeholder="Recherche"
                type="search"
                value="yolo"
              />
              <div
                class="c11"
                id="react-autowhatever-cdtn-documents-suggester"
                role="listbox"
              >
                <ul
                  role="listbox"
                  style="margin: .5em 0px 0px 0px; padding: 0px 0px 0px 0px; border: 1px solid silver; border-radius: 3px; background: white; position: absolute; left: 0px; right: 0px; box-shadow: 0 10px 10px -10px #b7bcdf;"
                >
                  <li
                    aria-selected="false"
                    data-suggestion-index="0"
                    id="react-autowhatever-cdtn-documents-suggester--item-0"
                    role="option"
                    style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
                  >
                    <div
                      class="c12"
                    >
                      <div
                        class="c13"
                      >
                        foo
                      </div>
                    </div>
                  </li>
                  <li
                    aria-selected="false"
                    data-suggestion-index="1"
                    id="react-autowhatever-cdtn-documents-suggester--item-1"
                    role="option"
                    style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
                  >
                    <div
                      class="c12"
                    >
                      <div
                        class="c13"
                      >
                        foobar
                      </div>
                    </div>
                  </li>
                  <li
                    aria-selected="false"
                    data-suggestion-index="2"
                    id="react-autowhatever-cdtn-documents-suggester--item-2"
                    role="option"
                    style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
                  >
                    <div
                      class="c12"
                    >
                      <div
                        class="c13"
                      >
                        foo bar ?
                      </div>
                    </div>
                  </li>
                  <li
                    aria-selected="false"
                    data-suggestion-index="3"
                    id="react-autowhatever-cdtn-documents-suggester--item-3"
                    role="option"
                    style="list-style-type: none; border-radius: 3px; padding: 5px; line-height: 2rem; cursor: pointer;"
                  >
                    <div
                      class="c12"
                    >
                      <div
                        class="c13"
                      >
                        foo bazzz
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </label>
          <button
            aria-pressed="false"
            class="c14"
            type="submit"
          >
            Rechercher
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
